--- a/src/main/webapp/admin/components/add-event.xhtml
+++ b/src/main/webapp/admin/components/add-event.xhtml
@@ -7,32 +7,18 @@
 <body>
 <ui:component>
     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-        Add Event
+        Ajouter
     </button>
     <div class="modal fade" tabindex="-1" id="exampleModal" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content bg-white">
-                <div class="modal-header">
-                    <div class="d-flex gap-2">
-                        <h5 class="modal-title" id="exampleModalLabel">Add Event</h5>
-                        <button onclick="editWithAi('new')" class="btn border shake-animation py-0 px-2" id="btnAi_new">AI</button>
-                    </div>
 
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
                 <div class="modal-body">
                     <h:form>
                         <div class="mb-3">
-                            <h:outputLabel for="title" value="Title"/>
-                            <h:inputText id="title" styleClass="form-control title_new" value="#{eventMB.event.title}" required="true"
-                                         requiredMessage="Title is required"/>
-                            <h:message for="title" showDetail="true" styleClass="error" />
-                        </div>
-
-                        <div class="mb-3">
-                            <h:outputLabel for="location" value="Location"/>
-                            <h:inputText id="location" styleClass="form-control" value="#{eventMB.event.location}" required="true"
-                                         requiredMessage="Location is required"/>
+                            <h:outputLabel for="title" value="Titre"/>
+                            <h:inputText id="title" styleClass="form-control title_new" value="#{eventMB.event.title}" required="false"
+                                         requiredMessage="Titre is required"/>
                             <h:message for="title" showDetail="true" styleClass="error" />
                         </div>
 
@@ -41,19 +27,42 @@
                             <h:inputTextarea id="description" styleClass="form-control description_new" value="#{eventMB.event.description}" />
                         </div>
 
-                        <div class="col-12 d-flex mb-3 gap-1 justify-content-between">
+                        <div class="mb-3">
+                            <h:outputLabel for="startDate" value="Date de Debut"/>
+                            <h:inputText  id="startDate" styleClass="form-control mx-1" value="#{eventMB.event.startDate}" required="false"
+                                         requiredMessage="Start Date is required">
+                                <f:converter converterId="dateConverter" for="startDate"/>
+                            </h:inputText>
+                            <h:message for="startDate" showDetail="true" styleClass="error" />
+                        </div>
 
-                        <div class="col-6">
+                        <div class="mb-3">
+                            <h:outputLabel for="endDate" value="Date de Fin"/>
+                            <h:inputText id="endDate"  styleClass="form-control mx-1" value="#{eventMB.event.endDate}" required="false"
+                                         requiredMessage="End Date is required">
+                                <f:converter converterId="dateConverter" for="endDate"/>
+                            </h:inputText>
+                            <h:message for="endDate" showDetail="true" styleClass="error" />
+                        </div>
+
+                        <div class="mb-3">
+                            <h:outputLabel for="location" value="Location"/>
+                            <h:inputText id="location" styleClass="form-control" value="#{eventMB.event.location}" required="false"
+                                         requiredMessage="durée is required"/>
+                            <h:message for="title" showDetail="true" styleClass="error" />
+                        </div>
+
+                        <div class="mb-3">
                             <h:outputLabel for="type" value="Type"/>
-                            <h:selectOneMenu id="type" styleClass="form-select" value="#{eventMB.event.type}" required="true" requiredMessage="Type is required">
+                            <h:selectOneMenu id="type" styleClass="form-select" value="#{eventMB.event.type}" required="false" requiredMessage="Type is required">
                                 <f:selectItem itemLabel="Select Type..." itemValue="" />
-                                <f:selectItems value="#{['CONFERENCE','CONFERENCE','WORKSHOP','FORMATION']}" var="eventType" itemLabel="#{eventType}" itemValue="#{eventType}"/>
+                                <f:selectItems value="#{['CONFERENCE','REUNION','SEMINAIRE','AUTRE']}" var="eventType" itemLabel="#{eventType}" itemValue="#{eventType}"/>
                             </h:selectOneMenu>
                             <h:message for="type" showDetail="true" styleClass="error" />
                         </div>
 
-                        <div class="col-6">
-                            <h:outputLabel for="organizer" value="Organzier"/>
+                        <div class="mb-3">
+                            <h:outputLabel for="organizer" value="Organizateur"/>
                             <h:selectOneMenu id="organizer" styleClass="form-select" value="#{eventMB.organizer}" >
                                 <f:selectItem itemLabel="Select Type..." itemValue="" />
                                 <f:selectItems value="#{userMB.getAllOrganizers()}" var="organizer" itemLabel="#{organizer.email}" itemValue="#{organizer.id}"/>
@@ -61,33 +70,15 @@
                             <h:message for="organizer" showDetail="true" styleClass="error" />
                         </div>
 
-                        </div>
-                        <div class="col-12 d-flex mb-3 gap-1 justify-content-between">
 
-                            <div class="col-6">
-                                <h:outputLabel for="startDate" value="Start Date"/>
-                                <h:inputText id="startDate"  type="date" styleClass="form-control mx-1" value="#{eventMB.event.startDate}" required="true"
-                                             requiredMessage="Start Date is required">
-                                    <f:converter converterId="dateConverter" for="startDate"/>
-                                </h:inputText>
-                                <h:message for="startDate" showDetail="true" styleClass="error" />
-                            </div>
 
-                            <div class="col-6">
-                                <h:outputLabel for="endDate" value="End Date"/>
-                                <h:inputText id="endDate"  type="date" styleClass="form-control mx-1" value="#{eventMB.event.endDate}" required="true"
-                                             requiredMessage="End Date is required">
-                                    <f:converter converterId="dateConverter" for="endDate"/>
-                                </h:inputText>
-                                <h:message for="endDate" showDetail="true" styleClass="error" />
-                            </div>
 
-                        </div>
+
 
 
                         <div class="modal-footer">
                             <button type="button" class="btn btn-subtle" data-bs-dismiss="modal">Cancel</button>
-                            <h:commandButton action="#{eventMB.save()}" styleClass="btn btn-primary" value="Add Event" />
+                            <h:commandButton action="#{eventMB.save()}" styleClass="btn btn-primary" value="Ajouter" />
                         </div>
 
                     </h:form>
