--- a/src/main/webapp/admin/components/list-events.xhtml
+++ b/src/main/webapp/admin/components/list-events.xhtml
@@ -118,7 +118,7 @@
 
                            <div class="modal-footer">
                               <button type="button" class="btn" data-bs-dismiss="modal">cancel</button>
-                              <h:commandButton action="#{eventMB.edit(event)}" styleClass="btn btn-primary" value="Edit Event" />
+                              <h:commandButton action="#{eventMB.edit(event)}" styleClass="btn btn-danger" style="background-color: green;" value="Edit Event" />
                            </div>
 
                         </h:form>
