CRUD EVENT ORGANIZERS IMAGE EVENT

--- a/src/main/webapp/admin/components/admin-sidebar.xhtml
+++ b/src/main/webapp/admin/components/admin-sidebar.xhtml
@@ -8,13 +8,10 @@
 <body>
     <ui:component>
 
-        <div class="d-flex flex-column flex-shrink-0 p-3 bg-white position-fixed top-0 start-0 border-end" style="width: 280px; height: calc(100vh - 48px); margin-top: 48px">
+        <div class="d-flex flex-column flex-shrink-0 p-3 bg-white position-fixed top-0 start-0 border-end" style="width: 140px; height: calc(100vh - 68px); margin-top: 70px; margin-right:10px; margin-left:20px;">
             <ul class="flex-column list-group mt-2 gap-3 font-semibold ">
-                <li class="nav-item">
-                    <h:link outcome="/admin/index" class="nav-link active" >
-                        Dashboard
-                    </h:link>
-                </li>
+
+
                 <li>
                     <h:link outcome="/admin/index" class="nav-link " >
                         Events
