--- a/src/main/webapp/admin/components/organizers/list-organizers.xhtml
+++ b/src/main/webapp/admin/components/organizers/list-organizers.xhtml
@@ -72,7 +72,7 @@
                 </div>
 
                 <h:form styleClass="p-0 m-0">
-                    <h:commandButton styleClass="btn btn-danger" value="Delete" action="#{eventMB.delete(organizer.id)}" />
+                    <h:commandButton styleClass="btn btn-danger" value="Delete" action="#{userMB.delete(organizer.id)}" />
                 </h:form>
             </div>
         </h:column>
